                               ViSP
                     Visual Servoing Platform
                     Resume of the change log

     Copyright Projet Lagadic / IRISA-INRIA Rennes, 2005 - 2014
                    http://team.inria.fr/lagadic


ViSP 2.9.1 (under development)
  - New features
    . Introduction of circles in the model-based tracker. In *.cao files
      comments are allowed on lines starting with # character
    . Video reader and writer support mpeg4
  - Tutorials
    . Introduce a new tutorial to show how to install ViSP from Ubuntu
      official packages.
    . Introduce a new tutorial to show how to install ViSP on Raspberry Pi.
    . Update KLT tracker tutorial to show how to initialize the tracker online.
    . Update blob tracker tutorial to show how to use v4l2 live camera.
  - Bug fixed
    . [17112] Error after second call to track() in vpMbEdgeTracker
    . [17212] vp1394TwoGrabber: unable to select a camera from its guid
    . [17457] Cannot apply a secondary task to a 7dof robot
    . [17550] Build error with ffmpeg libraries
    . [17620] vpXmlParserCamera::save() doesn't save the camera name and
      image size
----------------------------------------------
ViSP 2.9.0 (released February 18th, 2014)
  - New features
    . Introduction of a new template tracker using SSD (vpTemplateTrackerSSD
      classes) or ZNCC (vpTemplateTrackerZNCC classes). These trackers are able
      to estimate 2D transformations such as translation, SRT (scale, rotation
      and translation), affine and homography. A video
      illustrating this tracker capabilities is available on:
      http://team.inria.fr/lagadic/visp/computer-vision.html
    . In vpServo introduction of a new controller able to ensure continuous
      sequencing
  - Improvements
    . Add missing const to member functions and arguments passed by reference.
    . Introduction of a new option BUILD_WITH_STATIC_CRT that allows to set
      /MT (default) or /MD msvc build option